all html code in

--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
+    <link rel="stylesheet" href="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/CSS/style.css">
   </head>
   <body>
+    <header>
+      <h1>Discover hidden places in the world around you</h1>
+      <a href="Download Excursion (Coming soon!)">Download Excursion (Coming soon!)</a>
+    </header>
+    <div class="video">
+      <video src="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/excursion.mp4" autoplay poster="">
+
+      </video>
+    </div>
+    <div class="travel guide">
+      <h1>Your personal travel guide</h1>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="Reasources/camp-4.jpg" alt="Tent camp site">
+    </div>
+    <div class="coming soon">
+      <img src="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/phone.png" alt="white phone">
+      <h1>Coming Soon for iPhone and Android</h1>
+      <a href="Download Excursion (Coming soon!)">Download Excursion (Coming soon!)</a>
+    </div>
+    <footer>
+      <h2>© Excursion</h2>
+    </footer>
 
   </body>
 </html>
