--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Discover hidden places in the world around you</h1>
+      <h1 class="header">Discover hidden places in the world around you</h1>
       <a href="Download Excursion (Coming soon!)">Download Excursion (Coming soon!)</a>
     </header>
     <div class="video">
