--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <title>Excursion</title>
     <link rel="stylesheet" href="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/CSS/style.css">
   </head>
+
   <body>
-    <header>
-      <h1 class="header">Discover hidden places in the world around you</h1>
+    <div class="header">
+      <h1>Discover hidden places in the world around you</h1>
       <a href="Download Excursion (Coming soon!)">Download Excursion (Coming soon!)</a>
-    </header>
+    </div>
+
     <div class="video">
       <video src="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/excursion.mp4" autoplay poster="">
-
       </video>
     </div>
+
     <div class="travel guide">
       <h1>Your personal travel guide</h1>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <img src="Reasources/camp-4.jpg" alt="Tent camp site">
     </div>
+    
     <div class="coming soon">
       <img src="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/phone.png" alt="white phone">
       <h1>Coming Soon for iPhone and Android</h1>
