--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
 
   <body>
-    <div class="header">
-      <h1>Discover hidden places in the world around you</h1>
+    <div>
+      <h1 class="header">Discover hidden places in the world around you</h1>
       <a href="Download Excursion (Coming soon!)">Download Excursion (Coming soon!)</a>
     </div>
 
@@ -17,20 +17,20 @@
       </video>
     </div>
 
-    <div class="travel guide">
-      <h1>Your personal travel guide</h1>
-      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <div>
+      <h1 class="travel">Your personal travel guide</h1>
+      <p class="about">Excursion remembers places you like, and recommends new points of interest around you.</p>
       <img src="Reasources/camp-4.jpg" alt="Tent camp site">
     </div>
-    
-    <div class="coming soon">
+
+    <div>
       <img src="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/phone.png" alt="white phone">
-      <h1>Coming Soon for iPhone and Android</h1>
+      <h1 class="soon">Coming Soon for iPhone and Android</h1>
       <a href="Download Excursion (Coming soon!)">Download Excursion (Coming soon!)</a>
     </div>
-    <footer>
-      <h2>© Excursion</h2>
-    </footer>
+    <div>
+      <h3 class="copyright">© Excursion</h3>
+    </div>
 
   </body>
 </html>
