--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <h1 class="soon">Coming Soon for iPhone and Android</h1>
       <a href="Download Excursion (Coming soon!)">Download Excursion (Coming soon!)</a>
     </div>
-    <div>
+    <footer>
       <h3 class="copyright">© Excursion</h3>
-    </div>
+    </footer>
 
   </body>
 </html>
