--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link rel="stylesheet" href="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="Reasources/CSS/style.css">
   </head>
 
   <body>
