fixed photos and videos link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="video">
-      <video src="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/excursion.mp4" autoplay poster="">
+      <video src="Reasources/excursion.mp4" autoplay poster="">
       </video>
     </div>
 
@@ -24,7 +24,7 @@
     </div>
 
     <div>
-      <img src="/Users/jyemarshall/Desktop/Projects/Excursion/Reasources/phone.png" alt="white phone">
+      <img src="Reasources/phone.png" alt="white phone">
       <h1 class="soon">Coming Soon for iPhone and Android</h1>
       <a href="Download Excursion (Coming soon!)">Download Excursion (Coming soon!)</a>
     </div>
